@@ -18,6 +18,26 @@
     <name>Ancient::</name>
     <description>万物生长靠日</description>
 
+    <url>https://wings.fessional.pro</url>
+
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>trydofor</name>
+            <email>trydofor@gmail.com</email>
+        </developer>
+    </developers>
+
+    <scm>
+        <url>https://github.com/trydofor/pro.fessional.wings</url>
+    </scm>
+
     <modules>
         <module>wings</module>
         <module>example</module>
@@ -41,7 +61,7 @@
         <jooq.version>3.14.16</jooq.version>
         <h2.version>2.1.214</h2.version>
         <okhttp3.version>4.9.3</okhttp3.version> <!-- just auth need 4, spring use 3 https://square.github.io/okhttp/changelog/ FIXME in boot2.7-->
-        <jackson-jsr310.version>2.14.0-rc1</jackson-jsr310.version> <!-- https://github.com/FasterXML/jackson-modules-java8/issues/230 FIXME in 2.14 -->
+        <jackson-jsr310.version>2.14.1</jackson-jsr310.version> <!-- https://github.com/FasterXML/jackson-modules-java8/issues/230 FIXME in 2.14 -->
         <snakeyaml.version>1.33</snakeyaml.version> <!-- https://github.com/apache/shardingsphere/issues/21476 FIXME -->
         <!-- mvn boot -->
         <maven.test.skip>false</maven.test.skip>
@@ -71,6 +91,7 @@
         <servicecomb.version>2.8.0</servicecomb.version> <!-- https://github.com/apache/servicecomb-java-chassis/releases -->
         <!-- others -->
         <springdoc.version>1.6.8</springdoc.version> <!-- https://github.com/springdoc/springdoc-openapi/releases  boot-starter 2.6.7 -->
+        <therapi.version>0.15.0</therapi.version> <!-- https://github.com/dnault/therapi-runtime-javadoc  springdoc Javadoc support -->
         <boot-admin.version>2.6.7</boot-admin.version> <!-- https://github.com/codecentric/spring-boot-admin/releases spring-boot.version 2.6.7-->
         <sentry.version>6.4.0</sentry.version> <!-- https://github.com/getsentry/sentry-java/releases  springBootVersion = "2.6.8"-->
         <retrofit.version>2.9.0</retrofit.version> <!-- https://github.com/square/retrofit/tags -->
@@ -391,6 +412,11 @@
                 <version>${springdoc.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-javadoc</artifactId>
+                <version>${springdoc.version}</version>
+            </dependency>
+            <dependency>
                 <!-- 未曾使用，但因安全漏洞，避免误用，显示移除 -->
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-logging</artifactId>
@@ -478,6 +504,7 @@
                             <arg>--add-exports=java.base/java.nio=ALL-UNNAMED</arg> <!-- Hazelcast -->
                             <arg>--add-exports=java.base/java.lang=ALL-UNNAMED</arg> <!-- Hazelcast -->
                             <arg>--add-exports=java.base/java.lang.invoke=ALL-UNNAMED</arg> <!-- FastJson2 -->
+                            <arg>--add-opens=java.base/java.util=ALL-UNNAMED</arg> <!-- Boot Collections$EmptySet -->
                             <arg>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</arg> <!-- Hazelcast -->
                             <arg>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED</arg> <!-- Hazelcast -->
                             <arg>--add-exports=java.base/sun.security.x509=ALL-UNNAMED</arg> <!-- Boot -->
@@ -508,6 +535,11 @@
                                 <groupId>org.springframework.boot</groupId>
                                 <artifactId>spring-boot-autoconfigure-processor</artifactId>
                                 <version>${spring-boot.version}</version>
+                            </path>
+                            <path>
+                                <groupId>com.github.therapi</groupId>
+                                <artifactId>therapi-runtime-javadoc-scribe</artifactId>
+                                <version>${therapi.version}</version>
                             </path>
                         </annotationProcessorPaths>
                     </configuration>
